<resources>
    <string name="app_name">calculator</string>
    <string name="quotient">%</string>
    <string name="all_clear">C</string>
    <string name="clear">del</string>
    <string name="div">/</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="mul">X</string>
    <string name="num4">4</string>
    <string name="num3">3</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="sub">-</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="add">+</string>
    <string name="num0">0</string>
    <string name="result">=</string>
</resources>